added CORS support to the server

--- a/app/config.ini
+++ b/app/config.ini
@@ -10,7 +10,7 @@ url: /rest/login
 
 # Ex: http://localhost:8000/app/index.html
 # Tried with and without this entry 
-# redirect_url: /app/index.html
+redirect_url: /app/index.html
 
 #Ex: http://localhost:8000/app/login.html
 login_url: /app/login.html
