--- a/app/config.ini
+++ b/app/config.ini
@@ -17,7 +17,7 @@ login_url: /app/login.html
 
 [RESTUrl]
 #Ex: http://localhost/rest/page/1/menu
-url: /rest/url
+url: /rest/page/1/menu
 
 [RenderElements]
 id_main_menu: widgets
